# ate

./: .gitignore  Cargo.toml  README.md  flake.nix  justfile
app/: Cargo.toml  Dioxus.toml  justfile
app/css/: Cargo.toml
app/src/: app.rs  lib.rs  main.rs
app/src/app/: mod.rs  model.rs  route.rs
app/src/pages/: entry.rs  history.rs  home.rs  mod.rs
crux/: Cargo.toml
crux/src/: lib.rs  todo.rs
dioxus/: Cargo.toml
dioxus/src/: main.rs
model/: Cargo.toml
model/src/: entry.rs  lib.rs  tag.rs
proto/: Cargo.toml
proto/src/: age.rs  entry.rs  lib.rs  tag.rs
