[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/ate"
repository = "https://github.com/edger-dev/ate"

[workspace]
members = [
    "proto",
    "model",
    "app",
]
exclude = [
]

[workspace.dependencies]
ate_proto = { path = "proto", version = "0.1.0" }
ate_model = { path = "model", version = "0.1.0" }
ate_app = { path = "app", version = "0.1.0" }

edger_tree = { path = "../crates/common/tree" }

clap = { version = "4.1.14", features = [ "derive" ] }
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

uuid = { version = "1.3", features = [ "v4", "fast-rng", "macro-diagnostics" ] }
derive_builder = "0.12.0"
deref-derive = "0.1.0"

serde = { version = "1.0.162", features = ["derive", "alloc"] }
serde_json = { version = "1.0.96" }
typetag = "0.2.12"

chrono = { version = "0.4.26" }
chrono-tz = { version = "0.8.3" }
indexmap = { version = "2.0.0" }
dashmap = { version = "5.5.0" }
secrecy = { version = "0.8.0" }
snafu = "0.7.4"
async-trait = "0.1.64"
blake3 = { version = "1.3.3", features = [ "rayon" ]}

# app
dioxus-daisyui = "0.4.0"
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
dioxus-desktop = "0.4.0"
