[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/ate"
repository = "https://github.com/edger-dev/ate"

[workspace]
members = [
    "proto",
    "model",
    "app",
]
exclude = [
]

[workspace.dependencies]
ate_proto = { path = "proto", version = "0.1.0" }
ate_model = { path = "model", version = "0.1.0" }
ate_app = { path = "app", version = "0.1.0" }

edger_tree = { path = "../crates/common/tree" }

tracing = "0.1.37"
tracing-subscriber = "0.3.17"

uuid = "1.3"
derive_builder = "0.12.0"
deref-derive = "0.1.0"

serde = "1.0.162"
serde_json = "1.0.96"
typetag = "0.2.12"

chrono = "0.4.26"
chrono-tz = "0.8.3"
indexmap = "2.0.0"
dashmap = "5.5.0"
secrecy = "0.8.0"
snafu = "0.7.4"
async-trait = "0.1.64"
blake3 = "1.3.3"
getrandom = "0.2"

# crux
crux_core = "0.6.3"
crux_macros = "0.3.2"

lazy_static = "1.4.0"

# dioxus app
dioxus-daisyui = "0.4.0"
dioxus = "0.4.0"
dioxus-router = "0.4.1"
dioxus-web = "0.4.0"
dioxus-desktop = "0.4.0"
