[package]
name = "ate"
version = "0.1.0"
authors = ["YJ Park <yjpark@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

default = [
    "web",
]

web = [
    "dioxus-web",
    "dioxus-router/web",
]

desktop = [
    "dioxus-desktop",
]

[dependencies]
ate_model = { workspace = true }
dioxus = { workspace = true }
dioxus-router = { workspace = true }
dioxus-desktop = { workspace = true, optional = true }
dioxus-web = { workspace = true, optional = true }

fermi = { workspace = true }
lazy_static = { workspace = true }

# Debug
log = "0.4.19"
dioxus-logger = "0.4.1"
