[package]
publish = false
name = "ate_crux"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

serde = [
    "dep:serde",
    "ate_model/serde",
]

[dependencies]
ate_model = { workspace = true }

crux_core = { workspace = true }
crux_macros = { workspace = true }

tracing = { workspace = true }
lazy_static = { workspace = true }
serde = { workspace = true, optional = true, features = [ "derive" ]}