[package]
publish = false
name = "ate_model"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
serde = [
    "dep:serde",
    "ate_proto/serde",
    "uuid/serde",
    "dashmap/serde",
    "edger_tree/serde",
]

[dependencies]
ate_proto = { workspace = true }

tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
deref-derive = { workspace = true }
edger_tree = { workspace = true, features = [ "dashmap" ]}
serde = { workspace = true, optional = true, features = [ "rc" ] }
getrandom = { workspace = true, features = [ "js" ] } # js feature for wasm target
