[package]
publish = false
name = "ate_proto"
version = "0.1.0"

edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
serde = [
    "dep:serde",
    "uuid/serde",
    "chrono/serde",
    "chrono-tz/serde",
    "indexmap/serde",
]


[dependencies]
uuid = { workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
indexmap = { workspace = true }
serde = { workspace = true, optional = true }
